--- a/controls/vimline/vimline.css
+++ b/controls/vimline/vimline.css
@@ -35,10 +35,14 @@ html, body {
     /* Input fills VIM Line */
     width: 100%;
     height: 18px; /* subtract 1 for white bottom border */
-    /* Remove border from input */
-    border: 0;
     /* Prevent input-line from wrapping*/
     display: block;
+}
+.input-line,
+.input-line:focus {
+    /* Remove border from input */
+    border: 0;
+    outline: 0;
 }
 
 /*** Input Wrapper ***/
